# Traveler

./: README.md  docker-compose.yml
backend_api/: .clang-format  .clangd  CMakeLists.txt  Dockerfile  docker-compose.yml  failure.txt
backend_api/scripts/: run_tests.sh
backend_api/src/: CMakeLists.txt  main.cpp
backend_api/src/api/: Mappings.hpp
backend_api/src/api/dto/: LocationResponse.hpp  UserCreate.hpp
backend_api/src/api/json/: JsonConversion.hpp
backend_api/src/app/: App.cpp  App.h  Server.hpp
backend_api/src/authentication/: TokenVerifier.hpp
backend_api/src/core/application/: JourneyService.cpp  JourneyService.hpp  UnitOfWork.hpp  UserService.cpp  UserService.hpp
backend_api/src/core/domain/: Journey.hpp  JourneyCreate.hpp  JourneyUpdate.hpp  Location.hpp  LocationCreate.hpp  LocationUpdate.hpp  Mode.hpp  User.hpp  UserUpdate.hpp
backend_api/src/core/persistence/: DBPool.hpp  EnvVariables.hpp  JourneyStore.cpp  JourneyStore.hpp  Queries.cpp  Queries.hpp  Store.hpp  StoreErrors.hpp  UserStore.cpp  UserStore.hpp
backend_api/src/core/repository/: JourneyRepository.hpp  UserRepository.hpp
backend_api/src/domain/: Journey.h  Journey.hpp  JourneyRecord.h  Location.hpp  Mode.h  WithId.h
backend_api/src/http/: JourneyRoutes.cpp  JourneyRoutes.h
backend_api/src/http/controllers/: HealthController.cpp  HealthController.hpp  JourneyController.cpp  JourneyController.h  JourneyController.hpp  MeController.hpp
backend_api/src/http/middleware/: AuthMiddleware.cpp  AuthMiddleware.hpp
backend_api/src/json/: JourneyJson.cpp  JourneyJson.h
backend_api/src/migrations/: 000001_init.up.sql
backend_api/src/repository/: JourneyRepository.h  JourneyRepository.hpp  MockJourneyRepository.h  UserRepository.hpp  UserRepositoryErrors.hpp
backend_api/src/webapp/api/: Mappings.cpp  Mappings.hpp
backend_api/src/webapp/api/dto/: JourneyCreateRequest.hpp  JourneyCreateRequestContract.hpp  JourneyResponse.hpp  JourneyResponseContract.hpp  JourneyUpdateRequest.hpp  LocationCreateRequestContract.hpp  LocationResponse.hpp  LocationUpdateRequestContract.hpp  UserCreate.hpp  UserReponse.hpp  UserReponseContract.hpp
backend_api/src/webapp/api/json/: JsonConversion.hpp  JsonParser.hpp  JsonParserErrors.hpp
backend_api/src/webapp/app/: App.hpp  Server.cpp  Server.hpp
backend_api/src/webapp/authentication/: FirebaseTokenVerifier.hpp  TokenVerifier.hpp  VerifiedToken.hpp
backend_api/src/webapp/http/controllers/: Controller.hpp  ControllerErrors.hpp  HealthController.cpp  HealthController.hpp  JourneyController.cpp  JourneyController.hpp  MeController.cpp  MeController.hpp
backend_api/src/webapp/http/middleware/: AuthMiddleware.cpp  AuthMiddleware.hpp
backend_api/tests/: CMakeLists.txt  JourneyIdGetTest.cpp
backend_api/tests/routes/: HealthGetTest.cpp  JourneyFlowTest.cpp  JourneyGetTest.cpp  JourneyIdDeleteTest.cpp  JourneyIdGetTest.cpp  JourneyIdPutTest.cpp  JourneyPostTest.cpp
backend_api/tests/support/: CPRRouteFixture.cpp  CPRRouteFixture.h  CrowRouteFixture.h  CrowTestServer.cpp  CrowTestServer.h  JourneyTestData.h  TestCommon.hpp  TestConstants.h  TestConstants.hpp  TestServer.cpp  TestServer.hpp  TestUser.hpp
backend_api/tests/support/fixtures/: AuthMiddlewareFixture.hpp  HealthGet.hpp  HealthRoutes.hpp  JourneyGet.hpp  JourneyIdDelete.hpp  JourneyIdGet.hpp  JourneyIdPut.hpp  JourneyPost.hpp  JourneyRoutes.cpp  JourneyRoutes.hpp  MeGet.hpp  MeRoutes.cpp  MeRoutes.hpp  RouteFixture.hpp  UserStoreFixture.hpp
backend_api/tests/support/mocks/: FakeUnitOfWork.hpp  MockJourneyRepository.hpp  MockTokenVerifier.hpp  MockUserRepository.hpp
backend_api/tests/test_integration/: FirebaseAuthTest.cpp
backend_api/tests/test_middleware/: TestAuthMiddleware.cpp
backend_api/tests/test_persistence/: LibpqxxExplorationTests.cpp  TestUserStore.cpp
backend_api/tests/test_routes/: TestHealthGet.cpp  TestJourneyGet.cpp  TestJourneyIdDelete.cpp  TestJourneyIdGet.cpp  TestJourneyIdPut.cpp  TestJourneyPost.cpp  TestMeGet.cpp
backend_api/tests/test_webapp/: TestAuthMiddleware.cpp  TestHealthRoutes.cpp  TestJourneyRoutes.cpp  TestMeRoutes.cpp
backend_api/utility/: build.sh  format_code.sh  run.sh  run_integration_tests.sh  run_tests.sh
backend_api/utility/dev_environment/: build_dev_environment.sh  run_dev_environment.sh
cpp_api/: CMakeLists.txt  README.md
cpp_api/src/: App.cpp
cpp_api/src/controller/: TravelController.hpp
cpp_api/src/dto/: Travel.hpp
cpp_api/utility/: cd_to_root.sh  run.sh
dockerfiles/: .env.dev-info  .env.dev-info.example  .gitignore  Dockerfile.dev-base  Dockerfile.dev-gbaudelaire  README.md  README_UPDATE.md  docker-compose.dev.yml  docker-compose.localdb.yml  docker-compose.yml
dockerfiles/scripts/: dev-build.sh  dev-start.sh  dev-stop.sh
documentation/: .gitignore  traveler-api.yaml
documentation/utility/: api_schema_to_static_webpage.sh
migrations/: 000001_create_users_table.down.sql  000001_create_users_table.up.sql  000002_create_journeys_table.down.sql  000002_create_journeys_table.up.sql
migrations/scripts/: migrate_down.sh  migrate_drop.sh  migrate_up.sh
postgres-cluster/: Dockerfile
scripts/: run_backend_tests.sh
traveler_web/: Dockerfile  FirebaseConfig.ts  app.json  babel.config.js  docker-compose.yml  package-lock.json  package.json
traveler_web/app/: LoginPage.tsx  MainPage.tsx  _layout.tsx  index.tsx  register.tsx  styles.ts  travel.tsx
traveler_web/context/: UserContext.tsx
traveler_web/utility/: run_dev_container.sh
