CMAKE_MINIMUM_REQUIRED(VERSION 3.31)
PROJECT(Webserver LANGUAGES CXX)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

FIND_PACKAGE(Crow CONFIG REQUIRED)
FIND_PACKAGE(OpenSSL REQUIRED)
FIND_PACKAGE(ZLIB REQUIRED)

ADD_EXECUTABLE(main
  ./src/main.cpp
)

TARGET_LINK_LIBRARIES(main
    PRIVATE
    OpenSSL::SSL
    OpenSSL::Crypto
    ZLIB::ZLIB
    Crow::Crow
)
